Rename partials, update copy and use Helvetica

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -1,14 +1,14 @@
-@import "partials/variables.less";
-@import "partials/normalize.less";
-@import "partials/core.less";
-@import "partials/fonts.less";
-@import "partials/structure.less";
+@import "partials/_variables.less";
+@import "partials/_normalize.less";
+@import "partials/_core.less";
+@import "partials/_fonts.less";
+@import "partials/_structure.less";
 
-@import "partials/states.less";
+@import "partials/_states.less";
 
-@import "partials/player.less";
-@import "partials/controls.less";
-@import "partials/data.less";
+@import "partials/_player.less";
+@import "partials/_controls.less";
+@import "partials/_data.less";
 
-@import "partials/message.less";
+@import "partials/_message.less";
 
