--- a/assets/less/partials/_core.less
+++ b/assets/less/partials/_core.less
@@ -2,6 +2,7 @@ body, html {
 	background: url(images/bg_noise_dark.png) repeat scroll #000;
 	color: #fff;
 	margin: 0;
+	font-family: @font-helvetica;
 }
 
 h1, h2, h3, p {
